s5: remove warnings & deprecated references to baselib codes